crates/alien-permissions/tests/snapshots/aws_runtime__aws_policy_with_conditions.snap
---
source: crates/alien-permissions/tests/aws_runtime.rs
expression: result
---
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Sid": "StorageDataRead",
      "Effect": "Allow",
      "Action": [
        "s3:GetObject",
        "s3:GetObjectVersion",
        "s3:ListBucket"
      ],
      "Resource": [
        "arn:aws:s3:::my-stack-*",
        "arn:aws:s3:::my-stack-*/*"
      ],
      "Condition": {
        "StringEquals": {
          "sts:ExternalId": "my-external-id"
        },
        "StringEqualsIfExists": {
          "aws:ResourceTag/deployment": "my-stack"
        }
      }
    }
  ]
}
