crates/alien-permissions/tests/snapshots/aws_runtime__aws_storage_data_read_resource_binding.snap
---
source: crates/alien-permissions/tests/aws_runtime.rs
expression: result
---
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Sid": "StorageDataRead",
      "Effect": "Allow",
      "Action": [
        "s3:GetObject",
        "s3:GetObjectVersion",
        "s3:ListBucket"
      ],
      "Resource": [
        "arn:aws:s3:::my-stack-payments-data",
        "arn:aws:s3:::my-stack-payments-data/*"
      ]
    }
  ]
}
